--- a/style.css
+++ b/style.css
@@ -1,215 +1,359 @@
 body {
-	font-family: 'Digital-7', arial;
-	background-color: #f4f4f4;
-	margin: 0;
+  font-family: 'Digital-7', arial;
+  background-color: #f4f4f4;
+  margin: 0;
 }
 
 #header {
-	text-align: center;
-	font-size: 3em;
-	font-weight: 600;
-	margin-top: 30px;
+  text-align: center;
+  font-size: 6em;
+  font-weight: 600;
+  margin-top: 30px;
 }
 
 #surrounding {
-	display: flex;
-	justify-content: center;
-	margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  margin: 30px auto;
 }
 
 #whole-thing {
-	display: grid;
-	flex-grow: 1;
-	grid-template-areas: 
-		"screen  screen  screen  operatork"
-		"numbers numbers numbers operatork"
-		"numbers numbers numbers operatork"
-		"numbers numbers numbers operatork"
-		"numbers numbers numbers operatork";
-	grid-template-columns: 1fr 1fr 1fr 80px;
-	grid-template-rows: 82px 1fr 1fr 1fr 1fr;
-	grid-gap: 10px;
-	max-width: 600px;
-	min-height: 500px;
-	padding: 40px;
-	border: black 2px solid;
-	border-radius: 15px;
-	background-color: rgb(49, 49, 49);
-	box-shadow: 3px 3px 5px 6px #ccc;
+  display: grid;
+  flex-grow: 1;
+  grid-template-areas:
+    'screen  screen  screen  operatork'
+    'numbers numbers numbers operatork'
+    'numbers numbers numbers operatork'
+    'numbers numbers numbers operatork'
+    'numbers numbers numbers operatork';
+  grid-template-columns: 1fr 1fr 1fr 80px;
+  grid-template-rows: 82px 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  max-width: 600px;
+  min-height: 500px;
+  padding: 35px 35px 55px 35px;
+  border: black 2px solid;
+  border-radius: 15px;
+  background-color: rgb(49, 49, 49);
+  box-shadow: 3px 3px 5px 6px #ccc;
 }
 
 #screen {
-	background-color: white;
-	color: rgb(66, 66, 66);
-	font-size: 5.2em;
-	text-align: right;
-	grid-area: screen;
-	margin-top: 5px;
-	border-radius: 10px;
-	border: #a1a1a1 1px solid;
-	background-image: url(./images/LCD.png);
-	padding-top: 7px;
-	padding-right: 27px;
-	overflow: hidden;
+  background-color: white;
+  color: rgb(66, 66, 66);
+  font-size: 5.2em;
+  text-align: right;
+  grid-area: screen;
+  margin-top: 5px;
+  border-radius: 10px;
+  border: #a1a1a1 1px solid;
+  background-image: url(./images/LCD.png);
+  padding-top: 7px;
+  padding-right: 27px;
+  overflow: hidden;
 }
 
 #number-keys {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(4, 1fr);
-	grid-area: numbers;
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-area: numbers;
+  grid-gap: 10px;
 }
 
 #number-keys > button {
-	display: inline-block;
-	text-decoration: none;
-	color: #fff;
-	font-weight: bold;
-	background-color: #d0e2f0;
-	padding: 20px 40px;
-	font-size: 3em;
-	border: 1px solid #2d6898;
-	background-image: linear-gradient(bottom, rgb(73,132,180) 0%, rgb(97,155,203) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(73,132,180) 0%, rgb(97,155,203) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(73,132,180) 0%, rgb(97,155,203) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(73,132,180) 0%, rgb(97,155,203) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(73,132,180) 0%, rgb(97,155,203) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(73,132,180)),
-		color-stop(1, rgb(97,155,203))
-	);
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	text-shadow: 0px -1px 0px rgba(0,0,0,.5);
-	-webkit-box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-moz-box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-webkit-transition: all .1s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-	-webkit-transform: rotateX(20deg);
-	transform: rotateX(20deg);
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #d0e2f0;
+  padding: 20px 40px;
+  font-size: 3em;
+  border: 1px solid #2d6898;
+  background-image: linear-gradient(
+    bottom,
+    rgb(73, 132, 180) 0%,
+    rgb(97, 155, 203) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(73, 132, 180) 0%,
+    rgb(97, 155, 203) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(73, 132, 180) 0%,
+    rgb(97, 155, 203) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(73, 132, 180) 0%,
+    rgb(97, 155, 203) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(73, 132, 180) 0%,
+    rgb(97, 155, 203) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(73, 132, 180)),
+    color-stop(1, rgb(97, 155, 203))
+  );
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 50px;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transform: rotateX(20deg);
+  transform: rotateX(20deg);
 }
 
 #number-keys > button:hover {
-	background-image: linear-gradient(bottom, rgb(79,142,191) 0%, rgb(102,166,214) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(79,142,191) 0%, rgb(102,166,214) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(79,142,191) 0%, rgb(102,166,214) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(79,142,191) 0%, rgb(102,166,214) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(79,142,191) 0%, rgb(102,166,214) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(79,142,191)),
-		color-stop(1, rgb(102,166,214))
-	);
+  background-image: linear-gradient(
+    bottom,
+    rgb(79, 142, 191) 0%,
+    rgb(102, 166, 214) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(79, 142, 191) 0%,
+    rgb(102, 166, 214) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(79, 142, 191) 0%,
+    rgb(102, 166, 214) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(79, 142, 191) 0%,
+    rgb(102, 166, 214) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(79, 142, 191) 0%,
+    rgb(102, 166, 214) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(79, 142, 191)),
+    color-stop(1, rgb(102, 166, 214))
+  );
 }
 
 #number-keys > button:active {
-	-webkit-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-moz-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	background-image: linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(88,154,204)),
-		color-stop(1, rgb(90,150,199))
-	);
-    -webkit-transform: translate(0, 4px) rotateX(20deg);  
-    -moz-transform: translate(0, 4px);  
-    transform: translate(0, 4px);  
+  -webkit-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  background-image: linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(88, 154, 204)),
+    color-stop(1, rgb(90, 150, 199))
+  );
+  -webkit-transform: translate(0, 4px) rotateX(20deg);
+  -moz-transform: translate(0, 4px);
+  transform: translate(0, 4px);
 }
 
 #operator-keys {
-	grid-area: operatork;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  grid-area: operatork;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #operator-keys > button {
-	display: inline-block;
-	text-decoration: none;
-	color: #fff;
-	font-weight: bold;
-	background-color: #bdbdbd;
-	/* padding: 20px 70px; */
-	width: 100%;
-	height: 100%;
-	margin: 5px;
-	font-size: 3em;
-	border: 1px solid #9b9b9b;
-	background-image: linear-gradient(bottom, rgb(180, 180, 180) 0%, rgb(204, 204, 204) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(180, 180, 180) 0%, rgb(204, 204, 204) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(180, 180, 180) 0%, rgb(204, 204, 204) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(180, 180, 180) 0%, rgb(206, 206, 206) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(180, 180, 180) 0%, rgb(204, 204, 204) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(236, 236, 236)),
-		color-stop(1, rgb(194, 194, 194))
-	);
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	text-shadow: 0px -1px 0px rgba(0,0,0,.5);
-	-webkit-box-shadow: 0px 6px 0px #8d8d8d, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-moz-box-shadow: 0px 6px 0px #909090, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	box-shadow: 0px 6px 0px #929292, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-webkit-transition: all .1s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-	-webkit-transform: rotateX(20deg);
-	transform: rotateX(20deg);
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #bdbdbd;
+  /* padding: 20px 70px; */
+  width: 100%;
+  height: 100%;
+  margin: 5px;
+  font-size: 3em;
+  border: 1px solid #9b9b9b;
+  background-image: linear-gradient(
+    bottom,
+    rgb(180, 180, 180) 0%,
+    rgb(204, 204, 204) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(180, 180, 180) 0%,
+    rgb(204, 204, 204) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(180, 180, 180) 0%,
+    rgb(204, 204, 204) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(180, 180, 180) 0%,
+    rgb(206, 206, 206) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(180, 180, 180) 0%,
+    rgb(204, 204, 204) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(236, 236, 236)),
+    color-stop(1, rgb(194, 194, 194))
+  );
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 50px;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 6px 0px #8d8d8d, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0px 6px 0px #909090, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 6px 0px #929292, 0px 3px 15px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transform: rotateX(20deg);
+  transform: rotateX(20deg);
 }
 
 #operator-keys > button:hover {
-	background-image: linear-gradient(bottom, rgb(235, 235, 235) 0%, rgb(192, 192, 192) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(235, 235, 235) 0%, rgb(192, 192, 192) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(235, 235, 235) 0%, rgb(192, 192, 192) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(235, 235, 235) 0%, rgb(192, 192, 192) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(235, 235, 235) 0%, rgb(192, 192, 192) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(184, 184, 184)),
-		color-stop(1, rgb(143, 143, 143))
-	);
+  background-image: linear-gradient(
+    bottom,
+    rgb(235, 235, 235) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(235, 235, 235) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(235, 235, 235) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(235, 235, 235) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(235, 235, 235) 0%,
+    rgb(192, 192, 192) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(184, 184, 184)),
+    color-stop(1, rgb(143, 143, 143))
+  );
 }
 
 #operator-keys > button:active {
-	-webkit-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	-moz-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
-	background-image: linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(88,154,204) 0%, rgb(90,150,199) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgb(88,154,204)),
-		color-stop(1, rgb(90,150,199))
-		);
-		-webkit-transform: translate(0, 4px) rotateX(20deg);  
-		-moz-transform: translate(0, 4px);  
-		transform: translate(0, 4px);  
+  -webkit-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 2px 0px #2b638f, 0px 1px 6px rgba(0, 0, 0, 0.4),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
+    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
+  background-image: linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -ms-linear-gradient(
+    bottom,
+    rgb(88, 154, 204) 0%,
+    rgb(90, 150, 199) 100%
+  );
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(88, 154, 204)),
+    color-stop(1, rgb(90, 150, 199))
+  );
+  -webkit-transform: translate(0, 4px) rotateX(20deg);
+  -moz-transform: translate(0, 4px);
+  transform: translate(0, 4px);
 }
